syntax = "proto3";

package user;
option go_package = ".";

service UserService {
	rpc SignUp(SignUpUserRequest) returns (SignUpUserResponse);
}

enum UserStatus {
	ACTIVE = 0;
	INACTIVE = 1;
	BANNED = 2;
}

enum UserRole {
	UNKNOWN = 0;
	ADMIN = 1;
	CONSUMER = 2;
	MANAGER = 3;
	VENDOR = 4;
	ASSISTANT = 5;
}

message User {
	string			email = 1;
	string			password = 2;
	string			phone_number = 3;
	string			first_name = 4;
	string			middle_name = 5;
	string			last_name = 6;
	UserStatus		status = 7;
	UserRole		role = 8;
	string			avatar = 9;
	string			location = 10;
	string			id = 11;
}

message SuccessMessage {
	string	user_id = 1;
	string 	auth_token = 2;
	string 	first_name = 3;
	string	middle_name = 4;
	string	last_name = 5;
	string	avatar = 6;
	string	email = 7;
}

message ErrorMessage {
	string	message = 1;
}

message SignUpUserRequest {
	User user = 1;
}

message SignUpUserResponse {
	bool success = 1;
	ErrorMessage err_message = 2;
}
